Transition to using Volley